methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:40: error: not found: value avancer
  avancer(8)
  ^